--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "homepage": "https://parchello.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.1",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
